로그인 회원가입페이지 완료

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body{
-  background-color: #3B4048;
-  color: black;
+  background-color: rgb(241, 241, 241);
+  color: rgb(88, 88, 88);
 }
 
 .namespaces{
