--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body{
-  background-color: rgb(241, 241, 241);
-  color: rgb(88, 88, 88);
+  background-color: #3B4048;
+  color: black;
 }
 
 .namespaces{
