--- a/src/components/Namespaces/Namespaces.css
+++ b/src/components/Namespaces/Namespaces.css
@@ -205,6 +205,12 @@
   background-color:rgb(255, 255, 255);
 }
 
+#emptychat {
+  flex : 1;
+  background-color:rgb(255, 255, 255);
+  text-align: center;
+}
+
 #chat_header {
   grid-row: 1;
   grid-column: 1 / 4;
@@ -276,26 +282,36 @@
 }
 
 /* ----------------------------------------------- */
-#input_message {
-  padding-left: 8px;
-  border-radius: 4px 4px 0px 0px;
-  border-width: 2px 2px 1px 2px;
+#input {
+  border-radius: 4px;
+  border-width: 2px 2px 2px 2px;
   border-style: solid;
   border-color: darkgrey;
   outline: none;
-  grid-row: 4;
+
+  grid-row: 3 / 6;
   grid-column: 2;
+
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+#input_message {
+  width: 100%;
+  border: none;
+  padding: 2px 0px 0px 7px;
+  grid-row: 1;
+  border-width: 0px 0px 2px 0px;
+  border-style: solid;
+  border-color: darkgrey;
+  outline: none;
 }
 
 #input_etc {
+  width: 100%;
+  padding: 4px 0px 0px 0px;
+  grid-row: 2;
   background-color:rgb(255, 255, 255);
-  border-style: solid;
-  border-color: darkgrey;
-  border-width: 0px 2px 2px 2px;
-  border-radius: 0px 0px 4px 4px;
   text-align: center;
-  grid-row: 5;
-  grid-column: 2;
 }
 /* ----------------------------------------------- */
 aside {
