--- a/src/components/ModalMenu/ModalMenu.module.css
+++ b/src/components/ModalMenu/ModalMenu.module.css
@@ -1,8 +1,3 @@
-#modal_button {
-  all : unset;
-  cursor : pointer;
-  background-color: burlywood;
-}
 
 .modal {
   top: 0;
@@ -13,7 +8,7 @@
   margin: 20px;
 }
 /* 클릭시 모달배경 컬러 */
-.modal__overlay { 
+.overlay { 
   top: 0;
   left: 0;
   background-color: rgba(0,0,0,0);
@@ -22,7 +17,7 @@
   height: 100%;
 }
 /* 모달컨텐츠 */
-.modal__content {
+.content {
   top: 0px;
   left: 0px;
   background-color: rgb(248, 248, 246);
@@ -35,11 +30,6 @@
   border-width: 1px;
   border-color: rgb(196, 196, 196);
   box-shadow: 0 3px 5px rgba(0,0,0,0.05), 0 3px 5px rgba(0,0,0,0.1);
-}
-
-.modalmenu {
-  border-style: solid;
-  border-width: 1px;
 }
 
 .hidden {
