--- a/src/components/ModalCentered/CreateDM.module.css
+++ b/src/components/ModalCentered/CreateDM.module.css
@@ -60,12 +60,24 @@
   padding: 20px 20px;
 }
 
+.content__input {
+  width: 20vw;
+  height: 3.5vh;
+}
+.content__footer {
+  grid-row: 3;
+  grid-column: 1 / 3;
+  text-align: end;
+  margin : 18px 30px
+}
+
 .closeicon {
-  margin: 20px 5px;
+  margin: 20px 0px;
   cursor: pointer;
   grid-row: 1;
   grid-column: 2;
   font-size: 1.2rem;
+  width: 50px;
 }
 
 .hidden {
