--- a/src/components/Namespaces/Namespaces.css
+++ b/src/components/Namespaces/Namespaces.css
@@ -156,6 +156,8 @@
   grid-row: 2;
   grid-column: 1 / 4;
   overflow-y: auto;
+  width : 100%;
+  height : 100%;
 }
 
 #chatset_ul {
@@ -191,6 +193,14 @@
 .chatset_time {
   font-weight: 100;
   color: grey;
+}
+.dropzone {
+  grid-row: 2;
+  grid-column: 1 / 4;
+  width : 100%;
+  height : 100%;
+  overflow-y: auto;
+  outline: none;
 }
 
 /* ----------------------------------------------- */
