--- a/src/components/modals/ModalMenu/ModalMenu.module.css
+++ b/src/components/modals/ModalMenu/ModalMenu.module.css
@@ -45,16 +45,47 @@
 .content {
   top: 0px;
   left: 0px;
-  background-color: rgb(248, 248, 246);
+  background-color: rgb(248, 248, 248);
   position : fixed;
   width: 250px;
-  height:380px;
+  /* height:380px; */
   margin: 105px 80px; /* 위치 조절부분 */
   border-radius: 12px;
-  border-style: solid;
-  border-width: 1px;
+  /* border-style: solid;
+  border-width: 1px; */
   border-color: rgb(196, 196, 196);
   box-shadow: 0 3px 5px rgba(0,0,0,0.05), 0 3px 5px rgba(0,0,0,0.1);
+
+  display: inline-flex;
+  flex-direction: column;
+  padding: 0.9rem 0rem;
+  
+}
+.content p{
+  font-size: 1rem;
+  padding : 0.5rem 0 0.5rem 12px;
+  font-weight: 500;
+  margin-bottom: 0px;
+  color : rgb(50, 50, 50);
+  border-color: rgb(196, 196, 196);
+  cursor: default;
+}
+.content hr{
+  border: solid 1px rgb(196, 196, 196);
+  border-width: 0 0 1px 0;
+  width: 100%;
+}
+
+.content div{
+  font-size: 1rem;
+  padding : 0.5rem 20px 0.5rem 1.5rem;
+  cursor: pointer;
+  color : rgb(50, 50, 50);
+
+  
+}
+.content div:hover{
+  background-color: rgb(18, 100, 163);
 }
 
 .hidden {
