--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -7,11 +7,9 @@ aside {
   border-style: solid;
   border-width: 0px 0px 0px 1px;
   border-color: rgb(226, 226, 226);
-  
   display: grid;
   grid-template-rows : 70px 1fr;
 }
-
 #header{
   grid-row: 1;
   background-color : rgb(255, 255, 255);
@@ -23,7 +21,6 @@ aside {
   justify-content: center;
   align-items: center;
   box-shadow: 0 3px 5px rgba(0,0,0,0.05), 0 0 5px rgba(0,0,0,0.02);
-
 }
 
 #header div{
@@ -36,14 +33,13 @@ aside {
   
 }
 #header i{
+  cursor: pointer;
   flex: 0 0 65px;
   height: 100%;
   font-size: 1.4rem;
   padding : 26px 25px;
   color : rgb(29, 28, 29);
 }
-
-
 #body{
   grid-row: 2;
 }
