--- a/src/components/Namespaces/Namespaces.css
+++ b/src/components/Namespaces/Namespaces.css
@@ -134,11 +134,12 @@
   border-width: 0px 0px 1px 0px;
   border-color: rgb(226, 226, 226);
   box-shadow: 0 3px 5px rgba(0,0,0,0.05), 0 0 5px rgba(0,0,0,0.02);
+  overflow-x: hidden;
 }
 .aside_icon {
   cursor: pointer;
   grid-column: 3;
-  padding: 24px 0px 0px 27px;
+  padding: 25px 0px 0px 27px;
   color:rgb(17, 81, 148);
 }
 
@@ -148,7 +149,7 @@
 }
 
 #roomtitle {
-  padding: 20px 0px 0px 22px;
+  padding: 24px 0px 0px 22px;
   font-size: 1.1rem;
   font-weight: 700;
   
@@ -189,13 +190,18 @@
 
 .chatset_name {
   font-weight: 600;
-  padding-bottom : 2px
+  padding-bottom : 4px
 }
 
 .chatset_time {
   font-weight: 100;
   color: grey;
 }
+
+.chatset_message img, video {
+  max-width:65vw;
+}
+
 .dropzone {
   grid-row: 2;
   grid-column: 1 / 4;
@@ -207,13 +213,27 @@
 
 /* ----------------------------------------------- */
 
+aside {
+  color : rgb(29, 28, 29);
+  flex: 1;
+  max-width: 350px;
+  min-width: 300px;
+  background-color:rgb(255, 255, 255);
+  border-style: solid;
+  border-width: 0px 0px 0px 1px;
+  border-color: rgb(226, 226, 226);
+  display: none;
+  grid-template-rows : 70px 1fr;
+  
+}
+
 @media screen and (max-width: 768px) {
   aside {
     display: none;
   }
-  #list{
+  /* #list{
     display: none;
-  }
+  } */
   .sidebar_iconright {
     display: block;
   }
