--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -44,6 +44,7 @@
   grid-row: 2;
   grid-column: 1 / 4;
   overflow-y: auto;
+  overflow-x: hidden;
   width : 100%;
   height : 100%;
 }
@@ -84,5 +85,5 @@
 }
 
 .chatset_message img, video {
-  max-width:60vw;
+  max-width:50vw;
 }
