--- a/src/components/EmptyChat/EmptyChat.module.css
+++ b/src/components/EmptyChat/EmptyChat.module.css
@@ -1,9 +1,10 @@
 #emptychat {
-grid-row: 1 / 7;
-grid-column: 1 / 4;
-display: flex;
-justify-content: center;
-align-items: center;
+  flex : 1;
+  grid-row: 1 / 7;
+  grid-column: 1 / 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #emptychat h1 {
   color: rgb(26, 26, 26)
