--- a/src/components/Namespaces/Namespaces.css
+++ b/src/components/Namespaces/Namespaces.css
@@ -107,6 +107,12 @@ header {
 #schedule {
   flex: 1.5;
   background-color:rgb(255, 255, 255);
+  color : rgb(29, 28, 29);
+  display: grid;
+  grid-template-rows: 70px 1fr;
+  border-style: solid;
+  border-width: 0px 1px 0px 1px;
+  border-color: rgb(226, 226, 226);
 }
 
 
