--- a/src/components/Schedule/Schedule.module.css
+++ b/src/components/Schedule/Schedule.module.css
@@ -9,7 +9,7 @@
   display: grid;
   grid-template-columns: 1fr 70px;
 }
-#roomtitle {
+#title {
   grid-column: 1;
   padding: 24px 0px 0px 22px;
   font-size: 1.1rem;
@@ -49,28 +49,3 @@
   flex : 0 0 11px;
   max-width: 30px;
 }
-
-#aside {
-  flex : 1;
-  border-style: solid;
-  border-width: 0px 0px 0px 1px;
-  border-color: rgb(226, 226, 226);
-  display: grid;
-  grid-template-rows: 70px 1fr;
-}
-#aside_header {
-  grid-row: 1;
-
-  border-style: solid;
-  border-width: 0px 0px 1px 0px;
-  border-color: rgb(226, 226, 226);
-  box-shadow: 0 3px 5px rgba(0,0,0,0.05), 0 0 5px rgba(0,0,0,0.02);
-  overflow-x: hidden;
-  display: grid;
-  grid-template-columns: 1fr 70px;
-}
-#aside_body {
-  grid-row: 2;
-
-}
-
