--- a/src/components/sidebars/SidebarSchedule/SidebarSchedule.module.css
+++ b/src/components/sidebars/SidebarSchedule/SidebarSchedule.module.css
@@ -5,9 +5,9 @@
   border-width: 0px 0px 0px 1px;
   border-color: rgb(226, 226, 226);
   display: grid;
-  grid-template-rows: 50px 1fr;
+  grid-template-rows: 50px 1fr 150px;
 }
-#aside_header {
+#header {
   grid-row: 1;
 
   border-style: solid;
@@ -32,7 +32,7 @@
   font-size: 1.1rem;
 }
 
-#aside_body {
+#body {
   grid-row: 2;
   display: flex;
   flex-direction: column;
@@ -52,8 +52,8 @@ hr{
   width: 95%;
 }
 
-#event_desc {
-  flex : 0 0 400px;
+#event_body {
+  flex : 1;
   outline: none;
   border-style: none;
   resize: none;
@@ -63,15 +63,75 @@ hr{
 }
 
 
-#submit{
-  cursor : pointer;
+
+
+#footer {
+  grid-row : 3;
+  display: grid;
+  grid-template-rows: 1fr 1fr 70px;
+}
+
+#date_title {
+  grid-row: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  
+}
+#date_title span{
+  font-weight: 600;
   text-align: center;
-  padding-top: 3px;
+  font-size: 1.1rem;
+  padding-top: 7px;
+}
+
+
+#date_body {
+  grid-row: 2;
+  display: flex;
+  justify-content: space-around;
+}
+  #date_start { 
+    grid-column : 1;
+    /* padding : 0 10px 0 10px; */
+  }
+  #date_end { 
+    grid-column : 2;
+    /* padding : 0 10px 0 10px; */
+  }
+
+#submit {
+  grid-row: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#submit_button{
+  padding-top: 2px;
   background-color: rgb(165, 167, 168);
-  width: 100px;
-  height: 30px;
+  width: 70px;
+  height: 27px;
   border-style: solid;
   border-width: 2px;
-  border-color: rgb(26, 26, 26);
-  border-radius: 15px;
+
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 600;
+  border-style : solid;
+  border-color : grey;
+  
+  color : rgb(70, 70, 70);
+  text-align: center;
+  background-color: #ffffff;
+  justify-content: center;
+  /* transition: background-color 0.3s; */
 }
+
+#submit_button:hover{
+  /* #06387a #09428b*/
+  padding-top: 4px;
+  background-color: #0f4ea1;
+  color : rgb(241, 241, 241);
+  border-style : none;
+}
+
