--- a/src/components/sidebars/SidebarSchedule/SidebarSchedule.module.css
+++ b/src/components/sidebars/SidebarSchedule/SidebarSchedule.module.css
@@ -1,11 +1,12 @@
 
 #aside {
-  flex : 1;
+  flex : 1.5;
   border-style: solid;
   border-width: 0px 0px 0px 1px;
   border-color: rgb(226, 226, 226);
   display: grid;
   grid-template-rows: 50px 1fr 150px;
+  max-width: 500px;
 }
 #header {
   grid-row: 1;
@@ -36,6 +37,7 @@
   grid-row: 2;
   display: flex;
   flex-direction: column;
+  padding: 15px;
 }
 
 #event_title{
