텍스트 서식 완료

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -78,6 +78,11 @@
   font-weight: 600;
   padding-bottom : 4px
 }
+p{
+  line-height: 21px;
+  margin: 0;
+  padding : 0;
+}
 
 .chatset_time {
   font-weight: 100;
