--- a/src/components/Chat/ChatModal/ChatModal.module.css
+++ b/src/components/Chat/ChatModal/ChatModal.module.css
@@ -14,7 +14,7 @@
   border-style: solid;
   border-width: 1px;
   border-color: rgb(196, 196, 196);
-  box-shadow: 0 3px 5px rgba(0,0,0,0.05), 0 3px 5px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 0px rgba(0,0,0,0.015);
   /* 그리드관련 */
   display: grid;
   grid-template-rows: 75px 1fr 75px;
