--- a/src/components/Chat/ChatList/ChatList.module.css
+++ b/src/components/Chat/ChatList/ChatList.module.css
@@ -1,8 +1,9 @@
 
 .chatset_li {
   display: grid;
-  padding : 6px 15px 6px 15px; /* 위 / 오 / 아래 / 왼 */
-  grid-template-columns: 48px 1fr;
+  padding : 6px 15px 12px 15px; /* 위 / 오 / 아래 / 왼 */
+  grid-template-columns: 46px 1fr 160px;
+  grid-template-rows: 23px  1fr;
 }
 .chatset_li:hover{
   background-color: rgb(245, 245, 245);
@@ -11,29 +12,30 @@
 .chatset_image {
   display : block;
   border-radius: 5px;
-  width: 45px;
-  height: 45px;
+  width: 46px;
+  height: 46px;
   grid-column: 1;
+  grid-row: 1/3;
 }
 
 .chatset_message {
   grid-column: 2;
+  grid-row: 2;
   padding-left: 5px;
 }
 
 .chatset_name {
   font-weight: 600;
-  padding-bottom : 4px
+  padding: 0 0 5px 5px;
+}
+.chatset_time {
+  font-weight: 100;
+  color: grey;
 }
 p{
   line-height: 21px;
   margin: 0;
   padding : 0;
-}
-
-.chatset_time {
-  font-weight: 100;
-  color: grey;
 }
 
 .chatset_message img, video {
