--- a/src/components/Chat/ChatModal/ChatModal.module.css
+++ b/src/components/Chat/ChatModal/ChatModal.module.css
@@ -1,11 +1,11 @@
 /* 모달컨텐츠 */
 .content {
+  grid-row : 1;
+  grid-column : 3;
   color: rgb(26, 26, 26);
-  top: 0px;
-  left: 0px;
   background-color: rgb(248, 248, 246);
   /* 여길 relative로 적어주어야 중앙정렬됨 */
-  position : absolute; 
+  position : relative; 
   width: 160px;
   height: 40px;
   border-radius: 4px;
@@ -18,6 +18,7 @@
   grid-template-columns: 40px 40px 40px 40px;
   overflow: hidden;
   z-index: 1;
+  top : -25px
 }
 
 .content__body{
