--- a/src/components/Chat/ChatModal/ChatModal.module.css
+++ b/src/components/Chat/ChatModal/ChatModal.module.css
@@ -18,7 +18,9 @@
   grid-template-columns: 40px 40px 40px 40px;
   overflow: hidden;
   z-index: 1;
-  top : -25px
+  top : -25px;
+  left : 10px;
+  box-shadow: 0 3px 5px rgba(0,0,0,0.05), 0 3px 5px rgba(0,0,0,0.1);
 }
 
 .content__body{
