--- a/src/components/Chat/ChatModify/ChatModify.css
+++ b/src/components/Chat/ChatModify/ChatModify.css
@@ -1,22 +1,29 @@
 .modify-wrapper {
   width : 80%;
-  height: 120%;
+  height: 60px;
   position: static;
   overflow-y : auto;
   border-style: solid;
-  border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 0 0 ;
   border-color : grey;
-  border-width : 1px 1px 1px 1px;
-  grid-column : 1/3;
-  grid-row : 1/4;
-  margin-left : 20px;
+  border-width : 2px 2px 1px 2px;
+  grid-column : 2;
+  grid-row : 3;
+  margin : 6px 15px 0 15px;
 }
 
 .modify-control {
-  width : 100%;
-  height: 100%;
+  grid-column : 2;
+  grid-row : 2;
+  width : 80%;
+  height: 35px;
+  border-style: solid;
+  border-radius: 0 0 5px 5px;
+  border-width : 0px 2px 2px 2px;
+  border-color : grey;
   display : flex;
   justify-content: center;
+  margin : 0 15px 12px 15px;
 }
 
 .modify-control button{
