--- a/src/components/Chat/ChatList/ChatList.module.css
+++ b/src/components/Chat/ChatList/ChatList.module.css
@@ -2,7 +2,7 @@
 .chatset_li {
   display: grid;
   padding : 6px 15px 12px 15px; /* 위 / 오 / 아래 / 왼 */
-  grid-template-columns: 46px 1fr 160px;
+  grid-template-columns: 46px 1fr auto;
   grid-template-rows: 23px  1fr;
 }
 .chatset_li:hover{
