--- a/src/components/Chat/ChatModal/ChatModal.module.css
+++ b/src/components/Chat/ChatModal/ChatModal.module.css
@@ -1,12 +1,15 @@
-/* 모달컨텐츠 */
-.content {
+.content_wrapper {
   grid-row : 1;
   grid-column : 3;
+}
+
+/* 모달컨텐츠 */
+.content {
   color: rgb(26, 26, 26);
   background-color: rgb(248, 248, 246);
   /* 여길 relative로 적어주어야 중앙정렬됨 */
   position : relative; 
-  width: 160px;
+  width: 100%;
   height: 40px;
   border-radius: 4px;
   border-style: solid;
@@ -14,18 +17,19 @@
   border-color: rgb(196, 196, 196);
   box-shadow: 0px 0px 0px rgba(0,0,0,0.015);
   /* 그리드관련 */
-  display: grid;
-  grid-template-columns: 40px 40px 40px 40px;
-  overflow: hidden;
-  z-index: 1;
+  display: flex;
+  justify-content: space-between;
   top : -25px;
-  left : 10px;
+  z-index: 1;
   box-shadow: 0 3px 5px rgba(0,0,0,0.05), 0 3px 5px rgba(0,0,0,0.1);
+  margin-right : 3px;
 }
 
 .content__body{
+  flex : 1;
   font-size: 1.1rem;
-  padding : 12px 0 0 13px ;
+  padding : 12px 14px 0 15px ;
+  margin : 1px
 }
 
 .content__body:hover{
