--- a/src/components/Chat/ChatModify/ChatModify.css
+++ b/src/components/Chat/ChatModify/ChatModify.css
@@ -22,17 +22,30 @@
   border-width : 0px 2px 2px 2px;
   border-color : grey;
   display : flex;
-  justify-content: center;
+  justify-content: flex-end;
+  align-items: stretch;
   margin : 0 15px 12px 15px;
 }
 
-.modify-control button{
-  flex : 0 0 20px;
-  margin : 2px;
+.modify-control span{
+  flex : 0 0 40px;
+  margin : 3px;
+  padding : 3px 0 0 0;
+  background-color : rgb(41, 77, 179);
+  color : rgb(245, 245, 245);
+  border : 1px solid grey;
+  border-radius: 4px;
+  text-align: center;
+  justify-self: flex-end;
+}
+
+.modify-control span:hover{
+
 }
 .submit {
   flex : 1;
 }
+
 
 
 .public-DraftEditor-content {
