--- a/src/components/Chat/ChatList/ChatList.module.css
+++ b/src/components/Chat/ChatList/ChatList.module.css
@@ -2,7 +2,7 @@
 .chatset_li {
   display: grid;
   padding : 6px 15px 12px 15px; /* 위 / 오 / 아래 / 왼 */
-  grid-template-columns: 46px 1fr auto;
+  grid-template-columns: 48px 1fr auto;
   grid-template-rows: 23px 1fr;
 }
 .chatset_li:hover{
@@ -46,4 +46,10 @@ p{
 .deleted {
   color : grey;
   text-align: center;
+}
+
+.modified {
+  color : grey;
+  font-size: 0.8rem;
+  font-weight: 600;
 }
