메시지 수정 스크롤 수정완료

--- a/src/components/Chat/ChatModify/ChatModify.css
+++ b/src/components/Chat/ChatModify/ChatModify.css
@@ -1,6 +1,7 @@
 .modify-wrapper {
   width : 80%;
-  height: 60px;
+  min-height: 80px;
+  height: auto;
   position: static;
   overflow-y : auto;
   border-style: solid;
