--- a/src/components/Chat/ChatInput/ChatInput.css
+++ b/src/components/Chat/ChatInput/ChatInput.css
@@ -1,6 +1,7 @@
 .editor-wrapper {
   width : 100%;
-  height: 100%;
+  min-height: 65px;
+  height: auto;
   position: static;
   overflow-y : auto;
   border-style: solid;
