저자 등록 완료

--- a/src/components/Schedule/Schedule.module.css
+++ b/src/components/Schedule/Schedule.module.css
@@ -42,10 +42,19 @@
 }
 .event span {
   flex : 1;
+  overflow-x: hidden;
 }
 .removebutton {
   color: rgb(29, 28, 29);
-  margin : 2px 0 0 0;
+  margin : 3px 0 0 8px;
   flex : 0 0 11px;
   max-width: 30px;
+}
+.image { 
+  width: 30px;
+  height: 30px;
+}
+
+strong {
+  font-size :  1.1rem;
 }
