--- a/src/components/Chat/ChatMember/ChatMember.module.css
+++ b/src/components/Chat/ChatMember/ChatMember.module.css
@@ -1,5 +1,8 @@
 #container {
   width : 100%;
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  border-color: rgb(226, 226, 226);
 }
 
 #header {
@@ -8,6 +11,26 @@
   font-weight: 600;
   background-color: rgb(255, 255, 255);
   padding: 12px 0 0 20px;
+}
+
+.profile {
+  width: 45px;
+  height: 45px;
+  border : 0;
+  border-radius: 5px;
+  margin : 3px 0;
+}
+
+.ul {
+  padding-left : 20px;
+  margin : 10px 0;
+  font-weight: 600;
+}
+
+.li {
+  list-style-type: none;
+  margin : 5px 0;
+  height: 50px;
 }
 
 .hr {
