--- a/src/components/modals/ModalMenu/ModalMenu.module.css
+++ b/src/components/modals/ModalMenu/ModalMenu.module.css
@@ -46,7 +46,7 @@
 .content {
   top: 0px;
   left: 0px;
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(255, 255, 255);
   position : fixed;
   width: 250px;
   /* height:380px; */
@@ -64,7 +64,7 @@
 }
 .content p{
   font-size: 1rem;
-  padding : 0.4rem 0 0.4rem 12px;
+  padding : 0 0 0.4rem 12px;
   font-weight: 500;
   margin-bottom: 0px;
   color : rgb(50, 50, 50);
@@ -86,7 +86,7 @@
   
 }
 .content div:hover{
-  background-color: rgb(18, 100, 163);
+  background-color: rgb(245, 245, 245);
 }
 
 .hidden {
