채팅 전송창 수정

--- a/src/components/Chat/ChatInput/ChatInput.module.css
+++ b/src/components/Chat/ChatInput/ChatInput.module.css
@@ -20,16 +20,31 @@
   border-radius: 0 0 5px 5px;
   border-width : 0px 2px 2px 2px;
   border-color : grey;
-  display : flex;
-  justify-content: center;
+  display : grid;
+  grid-template-columns: 1fr 60px;
 }
 
-.editor_control button{
-  flex : 1;
-  margin : 2px;
+.button_wrapper {
+  grid-column : 1;
+  display: flex;
+  margin-left: 10px;
 }
+
+.button{
+  margin: 7px 8px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.button:hover{
+  color: rgb(50, 128, 211);
+}
+
 .submit {
-  flex : 1;
+  grid-column : 2;
+  margin: 7px 8px;
+  text-align: center;
+  font-weight: 600;
 }
 
 blockquote {
