--- a/src/components/Chat/ChatModify/ChatModify.module.css
+++ b/src/components/Chat/ChatModify/ChatModify.module.css
@@ -1,4 +1,4 @@
-.modify_wrapper {
+.editor_wrapper {
   width : 80%;
   min-height: 65px;
   height : 100%;
@@ -13,7 +13,7 @@
   margin : 6px 15px 0 20px;
 }
 
-.modify_control {
+.editor_control {
   grid-column : 2;
   grid-row : 2;
   width : 80%;
@@ -22,27 +22,43 @@
   border-radius: 0 0 5px 5px;
   border-width : 0px 2px 2px 2px;
   border-color : grey;
-  display : flex;
-  justify-content: flex-end;
-  align-items: stretch;
   margin : 0 15px 12px 20px;
+  display : grid;
+  grid-template-columns: 1fr 120px;
+}
+.button_wrapper {
+  grid-column : 1;
+  display: flex;
+  margin-left: 10px;
 }
 
-.modify_control span{
-  flex : 0 0 40px;
-  margin : 3px;
-  padding : 3px 0 0 0;
-  background-color : rgb(41, 77, 179);
-  color : rgb(245, 245, 245);
-  border : 1px solid grey;
-  border-radius: 4px;
+.button{
+  margin: 7px 8px;
   text-align: center;
-  justify-self: flex-end;
+  font-weight: 600;
+}
+
+.button:hover{
+  color: rgb(50, 128, 211);
 }
 
 .submit {
+  grid-column : 2;
+  margin: 7px 8px;
+  text-align: center;
+  font-weight: 600;
+  display: flex;
+  align-content: space-between;
+}
+
+.submit div{
   flex : 1;
 }
+.submit div:hover{
+  background-color: rgb(245, 245, 245);
+}
+
+
 
 blockquote {
   background-color : grey;
