--- a/src/components/Schedule/Schedule.module.css
+++ b/src/components/Schedule/Schedule.module.css
@@ -46,7 +46,7 @@
 }
 .removebutton {
   color: rgb(29, 28, 29);
-  margin : 3px 0 0 8px;
+  margin : 0 0 0 8px;
   flex : 0 0 11px;
   max-width: 30px;
 }
