--- a/src/components/EmptyChat/EmptyChat.module.css
+++ b/src/components/EmptyChat/EmptyChat.module.css
@@ -30,6 +30,7 @@
   color: rgb(235, 235, 235);
   font-size: 0.9rem;
   font-weight: 600;
+  cursor: pointer;
 }
 .Ns:hover{
   background-color: rgb(40, 40, 40);
