--- a/src/components/Namespaces/Namespaces.css
+++ b/src/components/Namespaces/Namespaces.css
@@ -11,7 +11,7 @@
 header {
   background-color:rgb(0, 0, 0);
   display: grid;
-  grid-template-columns: 1fr 80px;
+  grid-template-columns: 1fr 70px;
 }
 
 .logout {
@@ -21,6 +21,7 @@ header {
   font-weight: 600;
   font-size: 0.9rem;
   padding-top : 10px;
+  cursor: pointer;
 }
 
 .logout:hover {
