--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,7 +1,7 @@
 .quote {
   border-style: solid;
   border-width: 0 0 0 1px;
-  
+
   padding-left: 10px;
   padding-top: 5px;
   border-left: 5px solid #1f1f1f;
@@ -11,10 +11,14 @@
 .body {
     margin: 10px;
     margin-top : 10px;
-    
+
 }
 
 .name {
     font-weight: 600;
     margin-top : 30px;
+}
+.img {
+        width : 200px;
+        height : 200px;
 }
